# util

./: .clang-format  CMakeLists.txt
inc/: calculator.h
src/: calculator.c  operations.c  operations.h
